Revision history for {{$dist->name}}

{{$NEXT}}

0.31    2015-03-28 21:08:14Z
        - various misc distribution and packaging cleanup

0.30    2013-12-19 22:51:17Z
        - remove pod from internal and unindexed modules, for a prettier
          metacpan release page

0.29    2013-11-20 23:36:48Z
        - fixed use of an interface that was deprecated in Moose-2.1100
          (ether)
        - repository migrated from shadowcat to the github moose organization

0.28    2011-10-03
        - Fixed regression where mixed type constraints (MX:Types style and
        'classic' Stringy style) are used in a single structured type doesn't
        work.

0.27    2011-04-28
        - test fixes for new Moose

0.26    2011-01-02
        - removed version from Test::Fatal as asked by the debian folks
        - small documentation updates

0.25    2010-12-28
        - fixed bug where ->is_subtype_of dies meaninglessly when the type we
          are trying to check is not a type we can find.  This makes our
          handling consistent with core Moose.  Also changed ->equals and
          ->is_a_type_of to be consistent.
        - Added test case for above
        - The test suite now uses Test::Fatal instead of Test::Exception (Karen
          Etheridge).

0.24    2010-11-16
        - Added some performance enhancing caching code (phaeton)

0.23    2010-07-01
        - Changes to the return value of ->validate that hopefully is both
          backwardly compatible as well as more detailed.  Now if you have
          a deeply recursive of repeated type constraints inside other
          type constraints you will get a drill down report to show the
          actual type constraint that failed

0.22    2010-06-01
        - Added tests to demonstrate type constraint equality problem
          introduced in Moose 1.05

0.21    2010-03-26
        - Removed unneed module from test
        - additional contributed documentation fixes

0.20    2010-02-04