@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - fix namespace cleaning with older MooseX::Types
 
 0.31    2015-03-28 21:08:14Z
         - various misc distribution and packaging cleanup
